examples/solidity/bad/onlytests.sol
contract Abstract {
  function echidna_f() pure public returns (int) {return 0;}
}
